--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <a href="https://github.com/nandinisevak03" target="_blank"><i class='bx bxl-github'></i></a>
             </div>
             <div class="btn-group">
-                <a href="https://drive.google.com/file/d/1Zm_3XehjzKOVWrmBEnBbMJLCW9oMnTmo/view?usp=sharing" download  class="btn">Download Resume</a>
+                <a href="https://docs.google.com/document/d/1USHkueQKUF54sz4Lt7AohQV8iQjjSk-PK7WKRMkLQQM/edit?usp=sharing" download  class="btn">Download Resume</a>
             </div>
         </div>
         <div class="home-img">
